CHANGE HISTORY
--------------------------------

1.7.1   04/17/10

Added a shutdown for the VP2 serial port. This will release the port on error,
allowing a clean restart.

1.7.0   04/15/10

Big update.

Reports now use skins for their "look or feel."  Options specific to the
presentation layer have been moved out of the weewx configuration file
'weewx.conf' to a skin configuration file, 'skin.conf'. Other options have
remained behind.

Because the configuration file weewx.conf was split, the installation script
setup.py will NOT merge your old configuration file into the new one. You will
have to reedit weewx.conf to put in your customizations.

FTP is treated as just another report, albeit with an unusual generator. You can
have multiple FTP sessions, each to a different server, or uploading to or from
a different area.

Rewrote the FTP upload package so that it allows more than one FTP session to be
active in the same local directory. This version also does fewer hits on the
server, so it is significantly faster.

The configuration files weewx.conf and skin.conf now expect UTF-8 characters
throughout.

The encoding for reports generated from templates can be chosen. By default, the
day, week, month, and year HTML files are encoded using HTML entities; the NOAA
reports encoded using 'strict ascii.' Optionally, reports can be encoded using
UTF-8.

Revamped the template formatting. No longer use class ModelView. Went to a
simpler system built around classes ValueHelper and UnitInfo.

Optional formatting was added to all tags in the templates. There are now
optional endings:
  'string': Use specified string for None value.
  'formatted': No label.
  'format': Format using specified string format.
  'nolabel': Format using specified string format; no label.
  'raw': return the underlying data with no string formatting or label.

For the index, week, month, and year template files, added conditional to not